# umaumafancount-mp4tocsv

./: .gitignore  README.md  crop.py  main.py  pyproject.toml
input/: memberList.txt  memberReplace.json  menberReplace.json
